# tap-opendota

./: .gitignore  README.md  catalog.json  meltano.yml  pyproject.toml  results.json  streams-config.json  tap-opendota.sh  tox.ini
tap_opendota/: client.py  streams.py  tap.py
tap_opendota/schemas/: match_details.json
tap_opendota/tests/: __init__.py  test_core.py
