[tool.poetry]
name = "tap-opendota"
version = "0.0.1"
description = "`tap-opendota` is a Singer tap for opendota, built with the Meltano SDK for Singer Taps."
authors = ["John Kaustinen"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-opendota = 'tap_opendota.tap:Tapopendota.cli'
